Connector label, more interesting test data

--- a/widget/algorithmview.less
+++ b/widget/algorithmview.less
@@ -30,4 +30,13 @@
         right: 0;
         bottom: -3px;
     }
+
+    .connector-label {
+        width: 100%;
+        position: absolute;
+        top: 47%;
+        left: -50%;
+        background-color: white;
+        text-align: center;
+    }
 }
