--- a/widget/algorithmview.less
+++ b/widget/algorithmview.less
@@ -61,13 +61,13 @@
             }
 
             .algorithm-block-command-edit {
-                background-color: lightyellow;
-                border: 1px solid lightyellow;
+                background-color: gold;
+                border: 1px solid gold;
             }
 
             .algorithm-block-command-remove {
-                background-color: lightpink;
-                border: 1px solid lightpink;
+                background-color: pink;
+                border: 1px solid pink;
             }
         }
     }
@@ -103,6 +103,71 @@
         background-color: lightgoldenrodyellow;
     }
 
+    .algorithm-block-details-container {
+        position: absolute;
+        display: none;
+    }
+
+    .algorithm-details-holder {
+        @standard-padding: 10px;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: white;
+        border: 1px solid black;
+
+        .algorithm-details-template-holder {
+            position: absolute;
+            top: 0;
+            bottom: 50px;
+            width: 100%;
+            padding: @standard-padding;
+
+            .algo-detail-field {
+                position: relative;
+                padding: 5px @standard-padding;
+
+                .algo-detail-label {
+                    display: inline-block;
+                }
+
+                .algo-detail-value-wrapper {
+                    position: absolute;
+                    display: inline-block;
+                    left: 100px;
+                    right: @standard-padding;
+
+                    input {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+
+        .algorithm-details-actions-holder {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            padding: @standard-padding;
+
+            .algorithm-button {
+                background-color: lightgray;
+                text-transform: uppercase;
+                color: #333;
+                float: right;
+                padding: 0 20px;
+                font-size: 0.8em;
+                line-height: 30px;
+                vertical-align: middle;
+                cursor: default;
+            }
+            .algorithm-button:hover {
+                background-color: gray;
+            }
+        }
+    }
+
     .connector-far-down-arrow {
         width: 10px;
         height: 11px;
@@ -118,5 +183,20 @@
         left: -50%;
         background-color: white;
         text-align: center;
+    }
+
+    .algorithm-comment-content {
+        position:absolute;
+        top: 0;
+        left:40px;
+        right: 0;
+        height: 100%;
+        line-height: 100%;
+        padding-left: 10px;
+        text-align:left;
+        vertical-align:middle;
+        border-radius: 8px;
+        border-left: 2px dashed gray;
+        overflow: auto;
     }
 }
