--- a/widget/algorithmview.less
+++ b/widget/algorithmview.less
@@ -7,100 +7,149 @@
         box-sizing: border-box;
     }
 
-    .algorithm-block {
-        position: relative;
-        width: 100%;
+    .algorithm-transitions {
+        position:absolute;
+        top:0;
+        left:0;
+        height:100%;
 
-        .algorithm-block-content {
+        .connector-far-down-arrow {
+            width: 10px;
+            height: 11px;
+            position: absolute;
+            right: 0;
+            bottom: -3px;
+        }
+
+        .connector-label {
+            width: 100%;
+            position: absolute;
+            top: 47%;
+            left: -50%;
+            background-color: white;
+            text-align: center;
+        }
+    }
+
+    .algorithm-blocks {
+        position:relative;
+        top: 0;
+
+        .algorithm-block {
             position: relative;
             width: 100%;
-            height: 100%;
-            padding: 0 10px;
+
+            .algorithm-block-content {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                padding: 0 10px;
+                text-align: center;
+                vertical-align: middle;
+                -ms-text-overflow: ellipsis;
+                -o-text-overflow: ellipsis;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+            }
+
+            .algorithm-block-controls {
+                display: none;
+                position: absolute;
+                top: 0;
+                right: 0;
+                line-height: 100%;
+                text-align: center;
+                opacity: 0.8;
+
+                .algorithm-block-command {
+                    position: relative;
+                    display: inline-block;
+                    cursor: pointer;
+                    border-radius: 50%;
+                    width: 16px;
+                    height: 16px;
+                }
+
+                .algorithm-block-command:hover::after { 
+                    content: attr(data-title);
+                    white-space: nowrap;
+                    position: absolute;
+                    left: 100%; top: 100%;
+                    z-index: 1;
+                    background: rgba(255,255,255,0.9);
+                    font-size: 11px;
+                    padding: 5px 10px;
+                    border: 1px solid #333;
+                    width: auto;
+                }
+                .algorithm-block-command-add {
+                    background-color: lightgreen;
+                    border: 1px solid lightgreen;
+                }
+
+                .algorithm-block-command-edit {
+                    background-color: gold;
+                    border: 1px solid gold;
+                }
+
+                .algorithm-block-command-remove {
+                    background-color: pink;
+                    border: 1px solid pink;
+                }
+            }
+        }
+
+        .algorithm-block:not(.algorithm-block-teminator):hover {
+            .algorithm-block-content {
+                box-shadow: 0px 0px 15px 0px #888888;
+            }
+
+            .algorithm-block-controls {
+                display: block;
+            }
+        }
+
+        .algorithm-block-item {
+            border: 1px solid black;
+        }
+
+        .algorithm-block-condition {
             text-align: center;
             vertical-align: middle;
-            -ms-text-overflow: ellipsis;
-            -o-text-overflow: ellipsis;
+            padding: 0 10px;
             text-overflow: ellipsis;
             overflow: hidden;
             white-space: nowrap;
         }
 
-        .algorithm-block-controls {
-            display: none;
-            position: absolute;
+        .algorithm-block-teminator {
+            border-radius: @block-radius;
+        }
+
+        .algorithm-block-inprogress {
+            background-color: lightgoldenrodyellow;
+        }
+    }
+
+    .algorithm-comments {
+        position:absolute;
+        top: 0;
+
+        .algorithm-comment-content {
+            position:absolute;
             top: 0;
+            left:40px;
             right: 0;
+            height: 100%;
             line-height: 100%;
-            text-align: center;
-            opacity: 0.8;
-
-            .algorithm-block-command {
-                position: relative;
-                display: inline-block;
-                cursor: pointer;
-                border-radius: 50%;
-                width: 16px;
-                height: 16px;
-            }
-
-            .algorithm-block-command:hover::after { 
-                content: attr(data-title);
-                white-space: nowrap;
-                position: absolute;
-                left: 100%; top: 100%;
-                z-index: 1;
-                background: rgba(255,255,255,0.9);
-                font-size: 11px;
-                padding: 5px 10px;
-                border: 1px solid #333;
-                width: auto;
-            }
-            .algorithm-block-command-add {
-                background-color: lightgreen;
-                border: 1px solid lightgreen;
-            }
-
-            .algorithm-block-command-edit {
-                background-color: gold;
-                border: 1px solid gold;
-            }
-
-            .algorithm-block-command-remove {
-                background-color: pink;
-                border: 1px solid pink;
-            }
+            padding-left: 10px;
+            text-align:left;
+            vertical-align:middle;
+            border-radius: 8px;
+            border-left: 2px dashed gray;
+            overflow: auto;
         }
-    }
-
-    .algorithm-block:not(.algorithm-block-teminator):hover {
-        .algorithm-block-content {
-            box-shadow: 0px 0px 15px 0px #888888;
-        }
-
-        .algorithm-block-controls {
-            display: block;
-        }
-    }
-
-    .algorithm-block-item {
-        border: 1px solid black;
-    }
-
-    .algorithm-block-condition {
-        text-align: center;
-        vertical-align: middle;
-        padding: 0 10px;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
-    }
-
-    .algorithm-block-teminator {
-        border-radius: @block-radius;
-    }
-
-    .algorithm-block-inprogress {
-        background-color: lightgoldenrodyellow;
     }
 
     .algorithm-block-details-container {
@@ -168,35 +217,4 @@
         }
     }
 
-    .connector-far-down-arrow {
-        width: 10px;
-        height: 11px;
-        position: absolute;
-        right: 0;
-        bottom: -3px;
-    }
-
-    .connector-label {
-        width: 100%;
-        position: absolute;
-        top: 47%;
-        left: -50%;
-        background-color: white;
-        text-align: center;
-    }
-
-    .algorithm-comment-content {
-        position:absolute;
-        top: 0;
-        left:40px;
-        right: 0;
-        height: 100%;
-        line-height: 100%;
-        padding-left: 10px;
-        text-align:left;
-        vertical-align:middle;
-        border-radius: 8px;
-        border-left: 2px dashed gray;
-        overflow: auto;
-    }
 }
