Highlight condition blocks on hover

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -141,6 +141,10 @@
         .algorithm-block-condition {
             padding: 0 10px;
 
+            .algorithm-block-shadow {
+                background-color: transparent;
+            }
+
             .algorithm-condition-content {
                 position:absolute;
                 left:0;
