Preserve transitions with Ctrl, block edit dialog tuning

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -255,7 +255,7 @@
                     left: 100px;
                     right: @standard-padding;
 
-                    input {
+                    .algo-detail-value {
                         width: 100%;
                     }
                 }
