Algo width fix + fix start block

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -1,6 +1,10 @@
 .algorithm-view-holder {
     @block-radius: 20px;
     @connection-point-size: 16px;
+    position: relative;
+    width: 100%;
+    min-width: 400px;
+    max-width: 800px;
 
     div {
         -moz-box-sizing: border-box;
