--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -26,10 +26,19 @@
         width: auto;
     }
 
-    .algorithm-transitions {
+    .algorithm-addons {
         position:absolute;
         top:0;
         left:0;
+
+        .algorithm-addon-holder {
+            //border: 1px solid red;
+        }
+    }
+
+    .algorithm-transitions {
+        position:absolute;
+        top:0;
         height:100%;
 
         .connector-far-down-arrow {
