Got rid of inline styles

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -49,6 +49,22 @@
             bottom: -3px;
         }
 
+        .connector-far-up-arrow {
+            width: 10px;
+            height:11px;
+            position: absolute;
+            right: 0px;
+            top: -10px;
+        }
+
+        .connector-direct-arrow {
+            width: 11px;
+            height:10px;
+            position: absolute;
+            bottom: 5px;
+            left: -6px;
+        }
+
         .connector-label {
             width: 100%;
             position: absolute;
