Block numbers in boxes

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -161,6 +161,16 @@
             .algorithm-condition-connector-yes {
                 right: 0;
             }
+
+            .algorithm-block-num {
+                position:absolute;
+                line-height: 1em;
+                left:15px;
+                background-color: white;
+                border: 1px solid gray;
+                border-radius: 25%;
+            }
+
         }
 
         .algorithm-block-inprogress {
@@ -193,6 +203,10 @@
 
         .algorithm-block-item {
             border: 1px solid black;
+        
+            .algorithm-block-num {
+                top: -0.5em;
+            }
         }
 
         .algorithm-block-condition {
@@ -213,6 +227,10 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
+            }
+
+            .algorithm-block-num {
+                bottom: 50%;
             }
         }
 
