Comments are decorated with solid line

--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -260,7 +260,7 @@
             text-align:left;
             vertical-align:middle;
             border-radius: 8px;
-            border-left: 2px dashed gray;
+            border-left: 1px solid gray;
             overflow: auto;
         }
     }
