--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -66,12 +66,13 @@
         }
 
         .connector-label {
-            width: 100%;
             position: absolute;
-            top: 47%;
-            left: -50%;
+            top: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            padding: 0 2px;
             background-color: white;
-            text-align: center;
+            border: 1px solid gray;
+            border-radius: 25%;
         }
     }
 
