--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -16,7 +16,8 @@
         content: attr(data-title);
         white-space: nowrap;
         position: absolute;
-        left: 100%; top: 100%;
+        left: 120%;
+        top: -100%;
         line-height: normal;
         z-index: 1;
         background: rgba(255,255,255,0.9);
@@ -24,6 +25,7 @@
         padding: 5px 10px;
         border: 1px solid #333;
         width: auto;
+        border-radius: 4px;
     }
 
     .algorithm-addons {
@@ -111,8 +113,11 @@
                 display: none;
                 text-align: center;
                 line-height: normal;
-                vertical-align: bottom;
-                opacity: 0.8;
+                opacity: .8;
+                position: absolute;
+                left: 50%;
+                top: 100%;
+                transform: translate(-49%, -8px);
 
                 .algorithm-block-command {
                     position: relative;
@@ -157,6 +162,7 @@
 
             .algorithm-condition-connector-no {
                 left: 0;
+                transform: translateX(-50%);
             }
 
             .algorithm-block-num {
