--- a/widget/algorithm.less
+++ b/widget/algorithm.less
@@ -39,9 +39,9 @@
     }
 
     .algorithm-transitions {
-        position:absolute;
-        top:0;
-        height:100%;
+        position: absolute;
+        top: 0;
+        height: 100%;
 
         .connector-far-down-arrow {
             width: 10px;
@@ -56,7 +56,7 @@
             height:11px;
             position: absolute;
             right: 0px;
-            top: -10px;
+            top: -9px;
         }
 
         .connector-direct-arrow {
@@ -74,7 +74,7 @@
             padding: 0 2px;
             background-color: white;
             border: 1px solid gray;
-            border-radius: 25%;
+            border-radius: 4px;
         }
     }
 
@@ -171,7 +171,7 @@
                 left:15px;
                 background-color: white;
                 border: 1px solid gray;
-                border-radius: 25%;
+                border-radius: 4px;
             }
 
         }
