--- a/sources/algorithm.scss
+++ b/sources/algorithm.scss
@@ -1,6 +1,6 @@
 .algorithm-view-holder {
-    @block-radius: 20px;
-    @connection-point-size: 16px;
+    $block-radius: 20px;
+    $connection-point-size: 16px;
     position: relative;
     width: 100%;
     min-width: 400px;
@@ -142,8 +142,8 @@
             }
         
             .algorithm-condition-connector {
-                width: @connection-point-size;
-                height: @connection-point-size;
+                width: $connection-point-size;
+                height: $connection-point-size;
                 background-color: lightblue;
                 border: 1px solid lightblue;
                 opacity: 0.8;
@@ -230,12 +230,12 @@
         }
 
         .algorithm-block-teminator {
-            border-radius: @block-radius;
+            border-radius: $block-radius;
             .algorithm-block-shadow {
-                border-radius: @block-radius;
+                border-radius: $block-radius;
             }
             .algorithm-block-content {
-                border-radius: @block-radius;
+                border-radius: $block-radius;
             }
         }
     }
@@ -266,7 +266,7 @@
     }
 
     .algorithm-details-holder {
-        @standard-padding: 10px;
+        $standard-padding: 10px;
         position: relative;
         width: 100%;
         height: 100%;
@@ -278,11 +278,11 @@
             top: 0;
             bottom: 50px;
             width: 100%;
-            padding: @standard-padding;
+            padding: $standard-padding;
 
             .algo-detail-field {
                 position: relative;
-                padding: 5px @standard-padding;
+                padding: 5px $standard-padding;
 
                 .algo-detail-label {
                     display: inline-block;
@@ -292,7 +292,7 @@
                     position: absolute;
                     display: inline-block;
                     left: 100px;
-                    right: @standard-padding;
+                    right: $standard-padding;
 
                     .algo-detail-value {
                         width: 100%;
@@ -306,7 +306,7 @@
             bottom: 0;
             width: 100%;
             height: 50px;
-            padding: @standard-padding;
+            padding: $standard-padding;
 
             .algorithm-button {
                 background-color: lightgray;
